--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ajv": "^6.9.2",
     "bootstrap": "^5.0.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.0.17",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
